Добавлен эндпойнт на получение всех задач с сортировкой
