# api/docs/swagger.json
@@ -5,6 +5,61 @@
     },
     "paths": {
         "/tasks": {
+            "get": {
+                "description": "Get all tasks with optional sorting",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Get all tasks",
+                "parameters": [
+                    {
+                        "enum": [
+                            "CreateAsc",
+                            "CreateDesc",
+                            "PriorityAsc",
+                            "PriorityDesc",
+                            "DeadlineAsc",
+                            "DeadlineDesc"
+                        ],
+                        "type": "string",
+                        "description": "Sorting",
+                        "name": "sorting",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Task"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ApplicationError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new task",
                 "consumes": [
